@@ -1,3 +1,6 @@
+CNXContent-0.38
+  - removed adhoc branding (5 Jan 2009)
+
 CNXContent-0.37
   - light-weight-branding (30 Oct 2009)
     - Adding styling to CNX look and Rhaptos look for branding bar and
